--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>My Portfolio</title>
-  <link href="site.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My Portfolio</title>
+    <link href="site.css" rel="stylesheet">
 </head>
+
+<body>
+    <h1>Brendan Downing</h1>
+    <!--Profile image goes here-->
+    <img src="" class="profile_image">
+    <!--Profile image goes here-->
+    <h2>Fullstack Developer</h2>
+</body>
