--- a/index.html
+++ b/index.html
@@ -93,14 +93,13 @@
                                 <a class="nav-link" href="#">Resume</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled">Hobbies</a>
+                                <a class="nav-link">Hobbies</a>
                             </li>
                         </ul>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <p class="card-text">Here is the spraydown</p>
+
                     </div>
                 </div>
             </div>
