--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                                     <a class="nav-link active" aria-current="page" href="#">About me</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">My Languages</a>
+                                    <a class="nav-link" href="languages.html">My Languages</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">My Projects</a>
+                                    <a class="nav-link" href="projects.html">My Projects</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Contact me</a>
+                                    <a class="nav-link" href="contact.html">Contact me</a>
                                 </li>
                             </ul>
                         </div>
