--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                                     <a class="nav-link active" aria-current="page" href="#">About me</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">My Languages</a>
+                                    <a class="nav-link" href="languages.html">My Languages</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">My Projects</a>
+                                    <a class="nav-link" href="projects.html">My Projects</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Contact me</a>
+                                    <a class="nav-link" href="contact.html">Contact me</a>
                                 </li>
                             </ul>
                         </div>
@@ -93,14 +93,13 @@
                                 <a class="nav-link" href="#">Resume</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled">Hobbies</a>
+                                <a class="nav-link">Hobbies</a>
                             </li>
                         </ul>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <p class="card-text">Here is the spraydown</p>
+
                     </div>
                 </div>
             </div>
