--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,19 @@
                                 </li>
                             </ul>
                         </div>
+
                     </div>
             </div>
             </nav>
+            <div class="form-container">
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="floatingInput" placeholder="John Johnson">
+                    <label for="floatingInput">Full Name</label>
+                </div>
+                <div class="form-floating">
+                    <input type="email" class="form-control" id="floatingEmail" placeholder="Email">
+                    <label for="floatingPassword">Email Address</label>
+                </div>
+            </div>
         </div>
     </div>
