--- a/index-hobbies.html
+++ b/index-hobbies.html
@@ -87,22 +87,18 @@
                     <div class="card-header">
                         <ul class="nav nav-tabs card-header-tabs">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="true" href="index.html">About me</a>
+                                <a class="nav-link" aria-current="true" href="#">About me</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="index-resume.html">Resume</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="index-hobbies.html">Hobbies</a>
+                                <a class="nav-link active" aria-current="true" href="index-hobbies.html">Hobbies</a>
                             </li>
                         </ul>
                     </div>
                     <div class="card-body">
-                        <p class="card-text">Hey! Thanks for visiting my page! I am a full stack developer with
-                            experience in both Python and Java. I am passionate about rock climbing, the enviornment,
-                            and of course developing awesome applications. Most recently I worked for Rope Partner,
-                            doing fiberglass repair on Wind Turbine blades. I also developed an application for them
-                            which ultimately spurred on my transition to Software Engineering.
+                        <p class="card-text">Hobbies go here</p>
                     </div>
                 </div>
             </div>
