Change card, update contact me

--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
                                     <a class="nav-link" aria-current="page" href="index.html">About me</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="languages.html">My Languages</a>
+                                    <a class="nav-link active" href="resume.html">My Resume</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="projects.html">My Projects</a>
@@ -49,53 +49,5 @@
             </nav>
         </div>
     </div>
-    <div class="languages-container">
-        <figure>
-            <a href="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original-wordmark.svg"
-                target="_blank">
-                <img id="code-icon-java"
-                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original-wordmark.svg">
-            </a>
-            <figcaption>Java</figcaption>
-        </figure>
-        <figure>
-            <a href="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
-                target="_blank">
-                <img alt="Java icon" id="code-icon-js"
-                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg">
-            </a>
-            <figcaption>Javascript</figcaption>
-        </figure>
-        <figure>
-            <a href="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" target="_blank">
-                <img id="code-icon-python"
-                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg">
-            </a>
-            <figcaption>Python</figcaption>
-        </figure>
-        <figure>
-            <a href="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg"
-                target="_blank">
-                <img id="code-icon-html"
-                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" />
-            </a>
-            <figcaption>HTML</figcaption>
-        </figure>
-        <figure>
-            <a href="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg"
-                target="_blank">
-                <img id="code-icon-css"
-                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg" />
-            </a>
-            <figcaption>CSS</figcaption>
-        </figure>
-        <figure>
-            <a href="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg"
-                target="_blank">
-                <img id="code-icon-react"
-                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg" />
-            </a>
-            <figcaption>React</figcaption>
-        </figure>
-    </div>
+
 </body>
