--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -32,7 +33,7 @@
                                     <a class="nav-link" aria-current="page" href="index.html">About me</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="languages.html">My Languages</a>
+                                    <a class="nav-link" href="resume.html">My Resume</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="projects.html">My Projects</a>
@@ -55,6 +56,22 @@
                     <input type="email" class="form-control" id="floatingEmail" placeholder="Email">
                     <label for="floatingPassword">Email Address</label>
                 </div>
+                <div class="form-floating">
+                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+                    <label for="floatingTextarea2">Comments</label>
+                </div>
+            </div>
+            <div class="d-grid gap-2 col-3 mx-auto">
+                <button class="btn btn-primary" type="button">Reach Out!</button>
+            </div>
+            <div class="icons-containter">
+                <ul class="social-icons">
+                    <li id="fb-icon"><i class="fab fa-facebook-f"></i></li>
+                    <li id="twitter-icon"><i class="fab fa-twitter"></i></li>
+                    <li id="instagram-icon"><i class="fab fa-instagram"></i></li>
+                    <li id="linkedin-icon"><i class="fab fa-linkedin-in"></i></li>
+                </ul>
             </div>
         </div>
+    </div>
     </div>
