--- a/index-hobbies.html
+++ b/index-hobbies.html
@@ -32,7 +32,7 @@
                                     <a class="nav-link active" aria-current="page" href="#">About me</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="languages.html">My Languages</a>
+                                    <a class="nav-link" href="resume.html">My Resume</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="projects.html">My Projects</a>
@@ -90,7 +90,7 @@
                                 <a class="nav-link" aria-current="true" href="#">About me</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="index-resume.html">Resume</a>
+                                <a class="nav-link" href="index-languages.html">My Languages</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="true" href="index-hobbies.html">Hobbies</a>
