--- a/index-languages.html
+++ b/index-languages.html
@@ -32,7 +32,7 @@
                                     <a class="nav-link active" aria-current="page" href="#">About me</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="languages.html">My Languages</a>
+                                    <a class="nav-link" href="resume.html">My Resume</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="projects.html">My Projects</a>
@@ -90,7 +90,8 @@
                                 <a class="nav-link" href="index.html">About me</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="true" href="index-resume.html">Resume</a>
+                                <a class="nav-link active" aria-current="true" href="index-languages.html">My
+                                    Languages</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="index-hobbies.html">Hobbies</a>
@@ -98,7 +99,58 @@
                         </ul>
                     </div>
                     <div class="card-body">
-                        <p class="card-text">Resume goes here</p>
+                        <p class="card-text">
+                        <div class="languages-container">
+                            <figure>
+                                <a href="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original-wordmark.svg"
+                                    target="_blank">
+                                    <img id="code-icon-java"
+                                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original-wordmark.svg">
+                                </a>
+
+                            </figure>
+                            <figure>
+                                <a href="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
+                                    target="_blank">
+                                    <img alt="Java icon" id="code-icon-js"
+                                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg">
+                                </a>
+
+                            </figure>
+                            <figure>
+                                <a href="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg"
+                                    target="_blank">
+                                    <img id="code-icon-python"
+                                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg">
+                                </a>
+
+                            </figure>
+                            <figure>
+                                <a href="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg"
+                                    target="_blank">
+                                    <img id="code-icon-html"
+                                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" />
+                                </a>
+
+                            </figure>
+                            <figure>
+                                <a href="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg"
+                                    target="_blank">
+                                    <img id="code-icon-css"
+                                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg" />
+                                </a>
+
+                            </figure>
+                            <figure>
+                                <a href="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg"
+                                    target="_blank">
+                                    <img id="code-icon-react"
+                                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg" />
+                                </a>
+
+                            </figure>
+                        </div>
+                        </p>
                     </div>
                 </div>
             </div>
