--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -32,7 +33,7 @@
                                     <a class="nav-link active" aria-current="page" href="#">About me</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="languages.html">My Languages</a>
+                                    <a class="nav-link" href="resume.html">My Resume</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="projects.html">My Projects</a>
@@ -90,7 +91,7 @@
                                 <a class="nav-link active" aria-current="true" href="index.html">About me</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="index-resume.html">Resume</a>
+                                <a class="nav-link" href="index-languages.html">My Languages</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="index-hobbies.html">Hobbies</a>
