--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
                                     <a class="nav-link" aria-current="page" href="index.html">About me</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="languages.html">My Languages</a>
+                                    <a class="nav-link" href="resume.html">My Resume</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link active" href="projects.html">My Projects</a>
