Add links to icons

--- a/contact.html
+++ b/contact.html
@@ -66,10 +66,15 @@
             </div>
             <div class="icons-containter">
                 <ul class="social-icons">
-                    <li id="fb-icon"><i class="fab fa-facebook-f"></i></li>
-                    <li id="twitter-icon"><i class="fab fa-twitter"></i></li>
-                    <li id="instagram-icon"><i class="fab fa-instagram"></i></li>
-                    <li id="linkedin-icon"><i class="fab fa-linkedin-in"></i></li>
+                    <li id="fb-icon"><a id="icon-fb" href="http://www.facebook.com"><i
+                                class="fab fa-facebook-f"></i></a></li>
+                    <li id="gh-icon"><a id="icon-gh" href="http://github.com/downster"><i class="fab fa-github"></i></a>
+                    </li>
+                    <li id="instagram-icon"><a id="icon-ig" href="http://www.instagram.com/badtraddad"><i
+                                class="fab fa-instagram"></i></a></li>
+                    <li id="linkedin-icon"><a id="icon-li"
+                            href="https://www.linkedin.com/in/brendan-downing-641672228/"><i
+                                class="fab fa-linkedin-in"></i></a></li>
                 </ul>
             </div>
         </div>
