--- a/index-hobbies.html
+++ b/index-hobbies.html
@@ -87,7 +87,7 @@
                     <div class="card-header">
                         <ul class="nav nav-tabs card-header-tabs">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="true" href="#">About me</a>
+                                <a class="nav-link" aria-current="true" href="index.html">About me</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="index-languages.html">My Languages</a>
